--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "jss-preset-default": "^10.7.1",
     "koa-connect": "^2.1.0",
     "prettier": "^2.3.2",
+    "react-router-dom": "^5.3.0",
+    "react-router-redux": "^4.0.8",
     "webpack": "^5.51.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
