--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-loader": "^8.0.6",
     "babel-preset-react-optimize": "^1.0.1",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.4.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -71,9 +72,13 @@
     "jss": "^10.7.1",
     "jss-preset-default": "^10.7.1",
     "koa-connect": "^2.1.0",
+    "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
     "react-router-dom": "^5.3.0",
     "react-router-redux": "^4.0.8",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.0",
     "webpack": "^5.51.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
